fix http network log and remove static adapter for gridview.

--- a/app/src/main/res/layout/tab_user_gridview_item.xml
+++ b/app/src/main/res/layout/tab_user_gridview_item.xml
@@ -1,13 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/griditem_userphotos_imageView">
-    </ImageView>
-
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="horizontal">
+    <!--
+    <com.xiangyixie.picshouse.view.SquareCellGridView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
+    -->
+        <ImageView
+            android:id="@+id/griditem_userphotos_imageView"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:scaleType="fitXY"/>
+    <!--
+    </com.xiangyixie.picshouse.view.SquareCellGridView>
+    -->
 </LinearLayout>
