--- a/app/src/main/res/layout/griditem_user_photos.xml
+++ b/app/src/main/res/layout/griditem_user_photos.xml
@@ -2,8 +2,7 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent" android:layout_height="fill_parent"
-    android:orientation="horizontal"
-    >
+    android:orientation="horizontal">
 
     <com.xiangyixie.picshouse.view.SquareCellGridView
         android:id="@+id/griditem_user_photo"
