load post image from network url for tab 'House'.

--- a/app/src/main/res/layout/tab_house.xml
+++ b/app/src/main/res/layout/tab_house.xml
@@ -9,6 +9,10 @@ android:id="@+id/house_scrollview"
 android:layout_width="match_parent"
 android:layout_height="match_parent"-->
 
+    <android.support.v4.widget.SwipeRefreshLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/tab_house_refresh">
 
     <com.xiangyixie.picshouse.view.pinnedHeaderListView.PinnedHeaderListView
         android:id="@+id/tab_house_listview"
@@ -16,5 +20,7 @@ android:layout_height="match_parent"-->
         android:layout_height="match_parent" >
     </com.xiangyixie.picshouse.view.pinnedHeaderListView.PinnedHeaderListView>
     <!--/android.support.v4.widget.NestedScrollView-->
+
+    </android.support.v4.widget.SwipeRefreshLayout>
 
 </LinearLayout>
