--- a/app/src/main/res/layout/tab_house_listview_item_body.xml
+++ b/app/src/main/res/layout/tab_house_listview_item_body.xml
@@ -30,11 +30,12 @@
 
     <!--likes number-->
     <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="34dp"
+        android:layout_width="match_parent"
+        android:layout_height="26dp"
         android:gravity="center_vertical"
         android:orientation="horizontal"
-        android:paddingLeft="14dp">
+        android:paddingLeft="14dp"
+        android:paddingBottom="0dp">
 
         <TextView
             android:id="@+id/post_likes"
@@ -46,22 +47,36 @@
             android:textStyle="bold" />
     </LinearLayout>
 
+
     <!--description-->
     <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="34dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:gravity="center_vertical"
         android:orientation="horizontal"
         android:paddingLeft="14dp">
 
-        <TextView
+        <com.xiangyixie.picshouse.view.CommentView
             android:id="@+id/post_desc"
             android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <!--TextView
+            android:id="@+id/post_desc_username"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textColor="@color/dark_blue_like_text"
             android:textSize="13sp"
-            android:textStyle="bold" />
+            android:paddingRight="6dp"/>
+
+        <TextView
+            android:id="@+id/post_desc"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="@color/black"
+            android:textSize="13sp"/-->
     </LinearLayout>
 
 
