--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/main_container"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent">
+
+<android.support.design.widget.CoordinatorLayout
     android:id="@+id/main_picshouse"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
@@ -26,7 +32,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"></com.xiangyixie.picshouse.view.MyViewPager_notSwiping>
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+    </com.xiangyixie.picshouse.view.MyViewPager_notSwiping>
 
 
     <RelativeLayout
@@ -140,4 +147,4 @@
     </RelativeLayout>
 
 </android.support.design.widget.CoordinatorLayout>
-
+</FrameLayout>
