--- a/app/src/main/res/layout/tab_house_listview_item_body.xml
+++ b/app/src/main/res/layout/tab_house_listview_item_body.xml
@@ -23,8 +23,7 @@
             android:layout_marginLeft="0dp"
             android:layout_marginRight="0dp"
             android:layout_marginTop="0dp"
-            android:scaleType="fitXY"
-            android:src="@drawable/img5" />
+            android:scaleType="fitXY"/>
     </LinearLayout>
 
 
