--- a/app/src/main/res/layout/tab_user_header.xml
+++ b/app/src/main/res/layout/tab_user_header.xml
@@ -116,7 +116,6 @@
             android:clickable="false"
             android:paddingLeft="3dp"
             android:layout_marginTop="3dp"/>
-
     </LinearLayout>
 
 
@@ -126,7 +125,7 @@
           android:layout_width="fill_parent"/>
 
 
-    <!--user folling info-->
+    <!--user following info-->
     <LinearLayout
         android:id="@+id/user_following_info"
         android:layout_width="match_parent"
@@ -137,7 +136,7 @@
         android:layout_marginTop="4dp"
         android:layout_marginBottom="14dp"
         android:orientation="horizontal"
-        android:baselineAligned="false">
+        android:baselineAligned="true">
 
         <LinearLayout
             android:layout_width="0dp"
@@ -255,5 +254,10 @@
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
+
+    <!--separator-->
+    <View android:background="@color/gray_line_color"
+        android:layout_height="1dp"
+        android:layout_width="fill_parent"/>
 
 </LinearLayout>
