add user avatar load from url to comment list view item.

--- a/app/src/main/res/layout/tab_house_listview_item_header.xml
+++ b/app/src/main/res/layout/tab_house_listview_item_header.xml
@@ -8,7 +8,7 @@
         android:orientation="horizontal"
         android:background="@color/white">
 
-        <!--user profile image-->
+        <!--user avatar image-->
         <ImageView
             android:id="@+id/post_user_image"
             android:layout_width="40dp"
