--- a/app/src/main/res/layout/comment_listview_item.xml
+++ b/app/src/main/res/layout/comment_listview_item.xml
@@ -1,7 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:baselineAligned="false">
+
+    <!--user avatar image-->
+    <LinearLayout
+        android:layout_width="50dp"
+        android:layout_height="wrap_content"
+        android:paddingTop = "5dp"
+        android:paddingLeft="2dp"
+        android:paddingRight="2dp"
+        android:paddingBottom="5dp"
+        android:gravity="top">
+
+        <ImageView
+            android:id="@+id/comment_user_avatar"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center_horizontal"
+            />
+    </LinearLayout>
+
+    <!--user comment content-->
+    <LinearLayout
+        android:id="@+id/comment_content_layout"
+        android:layout_weight="1"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+    </LinearLayout>
 
 </LinearLayout>
