--- a/app/src/main/res/layout/comment_listview_item.xml
+++ b/app/src/main/res/layout/comment_listview_item.xml
@@ -25,12 +25,35 @@
 
     <!--user comment content-->
     <LinearLayout
-        android:id="@+id/comment_content_layout"
         android:layout_weight="1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
+       <LinearLayout
+           android:id="@+id/comment_content_layout"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:orientation="vertical"
+           android:gravity="center_horizontal"
+           android:paddingTop="3dp"
+           android:paddingLeft="2dp"
+           android:paddingRight="6dp"
+           android:paddingBottom="2dp">
+
+
+       </LinearLayout>
+
+        <TextView
+            android:id="@+id/comment_time"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop = "3dp"
+            android:paddingBottom="3dp"
+            android:paddingLeft="2dp"
+            android:paddingRight="6dp"
+            android:textSize = "13sp"
+            android:textColor="@color/gray"/>
     </LinearLayout>
 
 </LinearLayout>
