--- a/app/src/main/res/layout/fragment_comment.xml
+++ b/app/src/main/res/layout/fragment_comment.xml
@@ -27,27 +27,55 @@
         </ListView>
     </LinearLayout>
 
+
     <!--Input comment space-->
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="45dp"
         android:layout_gravity="bottom"
         android:orientation="horizontal">
-        <EditText
-            android:id="@+id/commentFrag_edittext_input"
-            android:layout_width="0pt"
+
+        <LinearLayout
             android:layout_height="match_parent"
-            android:layout_weight="5"
-            android:inputType="text"
-            android:imeOptions="actionSend"
-            android:imeActionLabel="@string/frag_comment_edittext_action"
-            android:hint="@string/frag_comment_edittext_hint"/>
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_margin="0dp"
+            android:padding="0dp"
+            android:orientation="vertical">
+
+            <!--separator-->
+            <View android:background="@color/gray_line_color"
+                android:layout_height="1dp"
+                android:layout_width="fill_parent"/>
+
+            <EditText
+                android:id="@+id/commentFrag_edittext_input"
+                android:layout_height="match_parent"
+                android:layout_width="match_parent"
+                android:layout_margin="0dp"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:paddingTop="3dp"
+                android:paddingBottom="3dp"
+                android:gravity="center_vertical"
+                android:inputType="textMultiLine"
+                android:textSize="14sp"
+                android:background="@color/transparent"
+                android:imeOptions="actionSend"
+                android:imeActionLabel="@string/frag_comment_edittext_action"
+                android:hint="@string/frag_comment_edittext_hint"/>
+
+        </LinearLayout>
+
         <Button
             android:id="@+id/commentFrag_button_send"
-            android:layout_width="0pt"
+            android:layout_width="50dp"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="@string/frag_comment_edittext_action"/>
+            android:gravity="center"
+            android:background="@color/yellow_impressed"
+            android:textColor="@color/white"
+            android:text="@string/frag_comment_edittext_action"
+            android:textSize="13sp"/>
     </LinearLayout>
 
 </LinearLayout>
