--- a/app/src/main/res/layout/comment_listview_item.xml
+++ b/app/src/main/res/layout/comment_listview_item.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:baselineAligned="false">
+    android:baselineAligned="false"
+    android:orientation="horizontal">
 
     <!--user avatar image-->
     <LinearLayout
@@ -19,8 +19,7 @@
             android:id="@+id/comment_user_avatar"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:layout_gravity="center_horizontal"
-            />
+            android:layout_gravity="center_horizontal" />
     </LinearLayout>
 
     <!--user comment content-->
